# DynamicInterface

./: CMakeLists.txt  README.md  package.xml
dynamic_interface/: CMakeLists.txt  package.xml
dynamic_interface/include/dynamic_interface/: publisher.hpp  service_client.hpp  subscriber.hpp
dynamic_interface/src/: publisher.cpp  service_client.cpp  subscriber.cpp
examples/: CMakeLists.txt  add_two_sum_client.cpp  bool_publisher.cpp  bool_subscriber.cpp  float_publisher.cpp  float_subscriber.cpp  package.xml  string_publisher.cpp  string_subscriber.cpp
include/dynamic_interface/: publisher.hpp
src/: main.cpp
tests/: CMakeLists.txt  main.cpp  package.xml  publisher.cpp
