<?xml version="1.0"?>
<package format="3">
  <name>ros2_dynamic_pub</name>
  <version>0.0.1</version>
  <description>Dynamic generic publisher with rosidl_dynamic_typesupport</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Базовые зависимости -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <!-- Для generic publisher -->
  <depend>rcutils</depend>

  <!-- introspection -->
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>

  <!-- динамическая сериализация -->
  <depend>rosidl_dynamic_typesupport</depend>

  <!-- QoS и сериализация -->
  <depend>rmw</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
