<?xml version="1.0"?>
<package format="3">
  <name>dynamic_interface</name>
  <version>0.0.1</version>
  <description>Dynamic ROS2 interfaces</description>

  <maintainer email="drobizov.victor@gmail.com">Drobizov Victor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_dynamic_typesupport</depend>
  <depend>rmw</depend>
  <depend>nlohmann_json</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
