<?xml version="1.0"?>
<package format="3">
  <name>dynamic_interface_examples</name>
  <version>0.0.1</version>
  <description>Examples for dynamic interface</description>

  <maintainer email="drobizov.victor@gmail.com">Drobizov Victor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nlohmann_json</depend>
  <depend>dynamic_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
